fix symbol : in YAML witch |

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,15 +30,18 @@ upload-release: # задача с именем upload-release
           - frontend/**/*
     script: 
       - echo "Get artifact from job ${ARTIFACT_JOB_ID}" 
-      - curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" https://gitlab.praktikum-services.ru/Stasyan/sausage-store/-/jobs/${ARTIFACT_JOB_ID}/artifacts/download -o sausage-store-0.0.1.zip \
+      - |
+        curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" https://gitlab.praktikum-services.ru/Stasyan/sausage-store/-/jobs/${ARTIFACT_JOB_ID}/artifacts/download -o sausage-store-0.0.1.zip \
         # скачивание артефакта в файл sausage-store-0.0.1.zip
       - echo "Upload artifact to package registry" 
-      - curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/" \
+      - |
+        curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/" \
         # сохранение артефакта в package registry
             
 notify-release:
     stage: release
     script:
-      -curl -X POST -H 'Content-type: application/json' --data \ 
+      - |
+        curl -X POST -H 'Content-type: application/json' --data \ 
          '{"text":"Максим Бурунов собрал и задеплоил приложение (gitlab) на     тестовый стенд."}' \
           https://hooks.slack.com/services/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
