fix gitlab-ci notify-release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,4 @@ notify-release:
     stage: release
     script:
       - |
-        curl -X POST -H 'Content-type: application/json' --data \ 
-         '{"text":"Максим Бурунов собрал и задеплоил приложение (gitlab) на     тестовый стенд."}' \
-          https://hooks.slack.com/services/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
+        curl -X POST -H 'Content-type: application/json' --data '{"text":"Максим Бурунов собрал и задеплоил приложение (gitlab) на тестовый стенд."}' https://hooks.slack.com/services/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
