--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,24 +45,24 @@ upload-release: # задача с именем upload-release
         curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/" \
         # сохранение артефакта в package registry
 
-#sonarqube-check-backend:
-#    image:
-#      name: sonarsource/sonar-scanner-cli:latest
-#      entrypoint: [""]
-#    variables:
-#      SONAR_USER_HOME: "${CI_PROJECT_DIR}/backend/.sonar"  # Defines the location of the analysis task cache
-#      GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#    cache:
-#      key: "${CI_JOB_NAME}"
-#      paths:
-#        - .sonar/cache
-#    script:
-#      - sonar-scanner -Dsonar.qualitygate.wait=true
-#    allow_failure: true
-#    only:
-#      - merge_requests
-#      - master # or the name of your main branch
-#      - develop
+sonarqube-check-backend:
+    image:
+      name: sonarsource/sonar-scanner-cli:latest
+      entrypoint: [""]
+    variables:
+      SONAR_USER_HOME: "${CI_PROJECT_DIR}/backend/.sonar"  # Defines the location of the analysis task cache
+      GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+    cache:
+      key: "${CI_JOB_NAME}"
+      paths:
+        - .sonar/cache
+    script:
+      - sonar-scanner -Dsonar.qualitygate.wait=true
+    allow_failure: true
+    only:
+      - merge_requests
+      - master # or the name of your main branch
+      - develop
 
 #sonarqube-check-frontend:
 #    image:
