--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,21 +45,26 @@ include:
 #        curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/" \
 #        # сохранение артефакта в package registry
 
-sonarqube-check-backend:
+sonarqube-check-frontend:
     image:
       name: sonarsource/sonar-scanner-cli:latest
       entrypoint: [""]
     variables:
       SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
       GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-      SONAR_TOKEN: "423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561"
-      SONAR_HOST_URL: "https://sonarqube.praktikum-services.ru/"
+#      SONAR_TOKEN: "423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561"
+#      SONAR_HOST_URL: "https://sonarqube.praktikum-services.ru/"
     cache:
       key: "${CI_JOB_NAME}"
       paths:
         - .sonar/cache
     script:
-      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectDescription=00_МАКСИМБУРУНОВ_ФРОНТЕНД
+      - sonar-scanner -Dsonar.qualitygate.wait=true \
+        -Dsonar.projectKey=00_MAKSIMBURUNOV_FRONTEND \
+        -Dsonar.sources=. \
+        -Dsonar.host.url=https://sonarqube.praktikum-services.ru \
+        -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561
+        -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/frontend
     allow_failure: true
     only:
       - merge_requests
