--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,12 +59,7 @@ sonarqube-check-frontend:
       paths:
         - .sonar/cache
     script:
-      - sonar-scanner -Dsonar.qualitygate.wait=true \
-        -Dsonar.projectKey=00_MAKSIMBURUNOV_FRONTEND \
-        -Dsonar.sources=. \
-        -Dsonar.host.url=https://sonarqube.praktikum-services.ru \
-        -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561
-        -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/frontend
+      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=00_MAKSIMBURUNOV_FRONTEND -Dsonar.sources=. -Dsonar.host.url=https://sonarqube.praktikum-services.ru -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561 -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/frontend
     allow_failure: true
     only:
       - merge_requests
