--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,6 @@ stages:
 include:
   - template: Security/SAST.gitlab-ci.yml
 
-#variables:
-#  SAST_GOSEC_LEVEL: 2
-      
 #build-code-job: # задача с именем build-code-job
 #    stage: build # этап build 
 #    script: # объявление скрипта
@@ -52,8 +49,6 @@ sonarqube-check-frontend:
     variables:
       SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
       GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#      SONAR_TOKEN: "423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561"
-#      SONAR_HOST_URL: "https://sonarqube.praktikum-services.ru/"
     cache:
       key: "${CI_JOB_NAME}"
       paths:
@@ -66,9 +61,28 @@ sonarqube-check-frontend:
       - master # or the name of your main branch
       - develop
 
+sonarqube-check-backend:
+    image:
+      name: sonarsource/sonar-scanner-cli:latest
+      entrypoint: [""]
+    variables:
+      SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+      GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+    cache:
+      key: "${CI_JOB_NAME}"
+      paths:
+        - .sonar/cache
+    script:
+      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=00_MAKSIMBURUNOV_BACKEND -Dsonar.sources=. -Dsonar.host.url=https://sonarqube.praktikum-services.ru -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561 -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/backend
+    allow_failure: true
+    only:
+      - merge_requests
+      - master # or the name of your main branch
+      - develop
+
 
 #notify-release:
 #    stage: release
 #    script:
 #      - |
-#        curl -X POST -H 'Content-type: application/json' --data '{"text":"Максим Бурунов собрал и задеплоил приложение (gitlab) на тестовый стенд."}' https://hooks.slack.com/services/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
+#        curl -X POST -H 'Content-type: application/json' --data '{"text":"Максим Бурунов собрал и задеплоил приложение (SonarQube) на тестовый стенд."}' https://hooks.slack.com/services/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
