--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ sonarqube-check-frontend:
       paths:
         - .sonar/cache
     script:
-      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=00_MAKSIMBURUNOV_FRONTEND -Dsonar.sources=. -Dsonar.host.url=https://sonarqube.praktikum-services.ru -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561 -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/frontend
+      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=${SONAR_PROJECTKEY_BACKEND} -Dsonar.sources=. -Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_LOGIN} -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/frontend
     allow_failure: true
     only:
       - merge_requests
@@ -73,7 +73,7 @@ sonarqube-check-backend:
       paths:
         - .sonar/cache
     script:
-      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=00_MAKSIMBURUNOV_BACKEND -Dsonar.sources=. -Dsonar.host.url=https://sonarqube.praktikum-services.ru -Dsonar.login=423d4d097a8c2d5a4887e5c4d1ce70f76a4e3561 -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/backend -Dsonar.java.binaries=**/* -Dsonar.language=java
+      - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=${SONAR_PROJECTKEY_BACKEND} -Dsonar.sources=. -Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_LOGIN} -Dsonar.projectBaseDir="${CI_PROJECT_DIR}"/backend -Dsonar.java.binaries=**/* -Dsonar.language=java
     allow_failure: true
     only:
       - merge_requests
