--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ include:
   - template: Security/SAST.gitlab-ci.yml
 
 build-code-job: # задача с именем build-code-job
+    image: alpine
     stage: build # этап build 
     script: # объявление скрипта
       - echo "ARTIFACT_JOB_ID=${CI_JOB_ID}" > CI_JOB_ID.txt  # сохранение номера задачи в файл, чтобы в дальнейшем использовать для копирования артефакта  
@@ -41,6 +42,7 @@ upload-release: # задача с именем upload-release
       - |
         curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}" -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/" \
         # сохранение артефакта в package registry
+    when: never
 
 sonarqube-check-frontend:
     stage: test
@@ -62,6 +64,7 @@ sonarqube-check-frontend:
       - merge_requests
       - master # or the name of your main branch
       - develop
+    when: never
 
 sonarqube-check-backend:
     stage: test
@@ -83,6 +86,7 @@ sonarqube-check-backend:
       - merge_requests
       - master # or the name of your main branch
       - develop
+    when: never
 
 notify-release:
     stage: release
