--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ include:
   - template: Security/SAST.gitlab-ci.yml
 
 build-code-job: # задача с именем build-code-job
-    image: alpine
+    image: debian
     stage: build # этап build 
     script: # объявление скрипта
       - echo "ARTIFACT_JOB_ID=${CI_JOB_ID}" > CI_JOB_ID.txt  # сохранение номера задачи в файл, чтобы в дальнейшем использовать для копирования артефакта  
