Включение стадии upload-release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,10 +29,10 @@ build-code-job: # задача с именем build-code-job
       
 upload-release: # задача с именем upload-release
     stage: release # этап release
-    only: # запуск этого шага только при изменениях в директориях backend и frontend
-        changes:
-          - backend/**/*
-          - frontend/**/*
+#    only: # запуск этого шага только при изменениях в директориях backend и frontend
+#        changes:
+#          - backend/**/*
+#          - frontend/**/*
     script: 
       - echo "Get artifact from job ${ARTIFACT_JOB_ID}" 
       - |
