--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.yandex.practicum.devops</groupId>
     <artifactId>sausage-store</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${version.application}</version>
     <name>sausage-store</name>
     <description>Backend for sausage-store</description>
     <properties>
@@ -116,5 +116,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+      <repository>
+            <id>sausage-store</id>
+            <name>sausage-store</name>
+            <url>${env.NEXUS_REPO_URL}/sausage-store-backend-burunov-m/</url>
+       </repository>
+    </distributionManagement>
 
 </project>
