--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -91,3 +91,4 @@ deploy:
        export "NEXUS_REPO_USER=${NEXUS_REPO_USER}";
        export "NEXUS_REPO_PASS=${NEXUS_REPO_PASS}";
        /bin/bash -s " < ./frontend/deploy/deploy.sh
+  when: manual
