--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -62,7 +62,7 @@ upload-release:
 deploy:
     stage: deploy
     before_script:
-      # устанавливаем ssh-agent для удобства аутентификации по ssh
+      # устанавливаем ssh-agent для удобства аутентификации по ssh (ssh-agent)
       - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
       - eval $(ssh-agent -s)
       # сохраняем сгенеренный ранее приватный ключ для раннера
