--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -22,6 +22,12 @@ build-code-job:
       reports:
         dotenv: CI_JOB_ID.txt # сохранение файла с переменными как артефакт
 
+sast:
+  stage: test
+  variables:
+    SAST_DEFAULT_ANALYZERS: eslint,semgrep,spotbugs
+    SAST_EXCLUDED_ANALYZERS: "nodejs-scan"
+
 sonarqube-check-backend:
     stage: test
     image:
