--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -91,7 +91,7 @@ deploy:
 rollback:
     stage: rollback
     before_script:
-      # устанавливаем ssh-agent для удобства аутентификации по ssh
+      # устанавливаем ssh-agent для удобства аутентификации по ssh1
       - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
       - eval $(ssh-agent -s)
       # сохраняем сгенеренный ранее приватный ключ для раннера
