Изменение в enviroment (исключил job upload-release)

--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -89,6 +89,8 @@ deploy:
         export "NEXUS_REPO_PASS=${NEXUS_REPO_PASS}";
         /bin/bash -s " < ./frontend/deploy/deploy.sh
     when: manual
+    environment:
+        name: deploy
 
 rollback:
     stage: rollback
