Добавил enviroment в job rollback

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -111,3 +111,5 @@ rollback:
         export "NEXUS_REPO_PASS=${NEXUS_REPO_PASS}";
         /bin/bash -s " < ./backend/rollback.sh
     when: manual
+    environment:
+        name: deploy
