--- a/backend/sausage-store-backend.service
+++ b/backend/sausage-store-backend.service
@@ -17,7 +17,7 @@ StandardOutput=append:/var/log/out.log
 StandardError=append:/var/log/out.log
 
 ExecStart=java -jar /home/admin/sausage-store.jar \
-            --spring.datasource.url=jdbc:postgresql://rc1b-xr7x7a9udzq5zzwi.mdb.yandexcloud.net:6432/sausage \
+            --spring.datasource.url=jdbc:postgresql://c-c9qelolihaitopcbigdo.rw.mdb.yandexcloud.net:6432/sausage \
             --spring.datasource.username=sausage \
             --spring.datasource.password=your_password
 
