ch connect appl

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 management.security.enabled=false
 
-spring.datasource.url=jdbc:postgresql://hostname:6432/sausagestore
+spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9:6432/sausage                
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=sausage
+spring.datasource.password=your_password
 #spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.name=ecommercedb
