--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,12 @@
     <dependencies>
 
        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
+
+       <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>8.2.1</version>
