--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=your_password
 
 #spring.datasource.name=ecommercedb
 spring.jpa.show-sql=false
+
+spring.data.mongodb.uri=mongodb://user:pass@host:port/db?tls=true
