fix connect string

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.password=your_password
 #spring.datasource.name=ecommercedb
 spring.jpa.show-sql=false
 
-spring.data.mongodb.uri=mongodb://sausage:your_password@$rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
+spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
 #spring.data.mongodb.uri=mongodb://user:pass@host:port/db?tls=true
