--- a/backend/sausage-store-backend.service
+++ b/backend/sausage-store-backend.service
@@ -20,7 +20,7 @@ ExecStart=java -jar /home/admin/sausage-store.jar \
             --spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9.rw.mdb.yandexcloud.net:6432/sausage \
             --spring.datasource.username=sausage \
             --spring.datasource.password=your_password
-            --spring.data.mongodb.uri=mongodb://sausage:your_password@$rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
+            --spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
 
 
 [Install]
