--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,14 @@ RUN mkdir /backend/sausage-store
 # копирование собранного бэкенда
 RUN mv /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
 
-ENTRYPOINT ["java","-jar","/backend/sausage-store/sausage-store-${APP_VERSION}.jar"]
+RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
+            --spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9.rw.mdb.yandexcloud.net:6432/sausage \
+            --spring.datasource.username=sausage \
+            --spring.datasource.password=your_password \
+            --spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true" \
+            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
+
+ENTRYPOINT /backend/sausage-store/run_script.sh
 
 # docker build --build-arg APP_VERSION=1.0.0-def -t sausage-store-backend:latest .
+# docker run sausage-store-backend
