--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -65,12 +65,14 @@ upload-release:
       - docker tag ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
                    ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:latest
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:latest
-      
+
       - tar czvf sausage-store-frontend-${VERSION}.tar.gz sausage-store-${VERSION}/public_html
       - >
         curl -v -u "${NEXUS_REPO_USER}:${NEXUS_REPO_PASS}"
         --upload-file sausage-store-frontend-${VERSION}.tar.gz
         ${NEXUS_REPO_URL}/sausage-store-frontend-burunov-m/sausage-store/${VERSION}/sausage-store-frontend-${VERSION}.tar.gz
+    tags:
+      - docker
 
 deploy:
     stage: deploy
