--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -19,6 +19,9 @@ build-code-job:
         - sausage-store-${VERSION}/sausage-store-${VERSION}.jar # сохранение собранного бэкенда как артефакт
       reports:
         dotenv: CI_JOB_ID.txt # сохранение файла с переменными как артефакт
+    tags:
+      - docker
+
 
 sast:
   stage: test
