--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -22,6 +22,8 @@ build-code-job:
         - sausage-store-${VERSION}/public_html # сохранение собранного фронтэнда как артефакт
       reports:
         dotenv: CI_JOB_ID.txt # сохранение файла с переменными как артефакт
+    tags:
+      - docker
 
 sast:
   stage: test
@@ -73,7 +75,7 @@ upload-release:
         ${NEXUS_REPO_URL}/sausage-store-frontend-burunov-m/sausage-store/${VERSION}/sausage-store-frontend-${VERSION}.tar.gz
     tags:
       - docker
-
+    
 deploy:
     stage: deploy
     before_script:
