--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -10,6 +10,9 @@ include:
 
 build-code-job:
     stage: build
+    image: docker:stable
+    services:
+      - docker:dind
     script:
       - echo "ARTIFACT_JOB_ID=${CI_JOB_ID}" > CI_JOB_ID.txt  # сохранение номера задачи в файл, чтобы в дальнейшем использовать для копирования артефакта  
       - cd backend 
