--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -25,6 +25,8 @@ build-code-job:
         - sausage-store-${VERSION}/public_html # сохранение собранного фронтэнда как артефакт
       reports:
         dotenv: CI_JOB_ID.txt # сохранение файла с переменными как артефакт
+    tags:
+      - docker
 
 sast:
   stage: test
