--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -11,6 +11,11 @@ include:
 build-code-job:
     stage: build
     image: docker:stable
+    variables:
+        DOCKER_HOST: tcp://docker:2376
+        DOCKER_TLS_CERTDIR: "/certs"
+        DOCKER_TLS_VERIFY: 1
+        DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
     services:
       - docker:dind
     script:
