--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build-code-job:
         DOCKER_HOST: tcp://docker:2376
         DOCKER_TLS_CERTDIR: "/certs"
         DOCKER_TLS_VERIFY: 1
-        DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
+#        DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
     services:
       - docker:dind
     script:
