--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -13,8 +13,8 @@ build-code-job:
     image: docker:stable
     variables:
         DOCKER_HOST: tcp://docker:2376
-        DOCKER_TLS_CERTDIR: "/certs"
-        DOCKER_TLS_VERIFY: 1
+#        DOCKER_TLS_CERTDIR: "/certs"
+#        DOCKER_TLS_VERIFY: 1
 #        DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
     services:
       - docker:dind
