--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -23,7 +23,8 @@ build-code-job:
     script:
       - echo "ARTIFACT_JOB_ID=${CI_JOB_ID}" > CI_JOB_ID.txt  # сохранение номера задачи в файл, чтобы в дальнейшем использовать для копирования артефакта  
       - cd backend 
-      - docker build --build-arg APP_VERSION=${VERSION} -t sausage-store-backend:latest .
+#      - docker build --build-arg APP_VERSION=${VERSION} -t sausage-store-backend:latest .
+      - docker build --build-arg APP_VERSION=${VERSION} -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG} .
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
     artifacts:
       paths:
