--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build-code-job:
       - cd backend 
 #      - docker build --build-arg APP_VERSION=${VERSION} -t sausage-store-backend:latest .
       - docker build --build-arg APP_VERSION=${VERSION} -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG} .
-      - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
+      - docker push backend-${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
     artifacts:
       paths:
         - sausage-store-${VERSION}/sausage-store-${VERSION}.jar # сохранение собранного бэкенда как артефакт
